## Process this file with automake to produce Makefile.in

SUBDIRS = languages man resources src

EXTRA_DIST = \
	README\
	README.br\
	COPYING\
	AUTHORS\
	ChangeLog\
	ChangeLog.br\
	INSTALL\
	NEWS\
	TODO\
	COPYING

## nobase_include_HEADERS = \
## 	languages/de/wxDFast.mo
## 	languages/es/wxDFast.mo
## 	languages/pt_BR/wxDFast.mo
