dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(wxdfast, 0.5.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Set of available languages.
ALL_LINGUAS="de es pt_BR"

AC_ARG_ENABLE(debug,
[  --enable-debug          This option build the program in debug mode],
[ debug=yes])

AC_ARG_ENABLE(xrcmode,
[  --enable-xrcmode        This option make the program to use external xrc
                          files, instead of built-in],
[ xrcmode=yes])

AC_ARG_ENABLE(win32build,
[  --enable-win32build     Use this option when building on Windows systems],
[ win32build=yes])

AM_CONDITIONAL([DEBUG],     [test x$debug = xyes])
AM_CONDITIONAL([XRCMODE],   [test x$xrcmode = xyes])
AM_CONDITIONAL([NOXRCMODE], [test x$xrcmode = x])
AM_CONDITIONAL([WIN32BUILD], [test x$win32build = xyes])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_CPP
AC_PROG_CXX
AC_PROG_AWK

AM_PROG_LIBTOOL

# cross-compile checks
if test x"${build}" != x"${host}"; 
then
   AC_CHECK_TOOL(WINDRES, windres, :)
   AM_CONDITIONAL([WIN32BUILD], [test "" = ""])
fi

AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG(2.6.0, wxWin=1, , [xrc,std])
        if test "$wxWin" != 1; then
        AC_MSG_ERROR([
                wxWindows must be installed on your system.

                Please check that wx-config is in path, the directory
                where wxWindows libraries are installed (returned by
                'wx-config --libs' or 'wx-config --static --libs' command)
                is in LD_LIBRARY_PATH or equivalent variable and
                wxWindows version is 2.6.0 or above.
                ])
	fi

AC_PATH_PROG([WXRC], [wxrc --version])
	if test "x$WXRC" = "x"; then
	AC_MSG_ERROR([
		wxrc could not be found. This program gets build together with wxWidgets.
		Please make sure wxrc is within your path.
		])
	fi

AC_OUTPUT([
Makefile
languages/Makefile
languages/de/Makefile
languages/es/Makefile
languages/pt_BR/Makefile
man/Makefile
man/man1/Makefile
man/pt_BR/Makefile
man/pt_BR/man1/Makefile
resources/Makefile
resources/big/Makefile
resources/small/Makefile
src/Makefile
])

