## Process this file with automake to produce Makefile.in

pkgdatadir = $(datadir)/@PACKAGE@/RipStop/icon/svg

dist_pkgdata_DATA = \
	download_add.svg \
	download_new.svg \
	download_stop_all.svg \
	download_info.svg \
	download_remove.svg \
	download_stop.svg \
	download_move_down.svg \
	download_start_all.svg \
	download_move_up.svg \
	download_start.svg
